refactor(backend): remove unecessary route for logging out
